# valeton-gp200-english-patch

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  translations_gp200.json
.github/workflows/: lint.yml
valeton_gp200_english_patch/: generate_translations.py  patch_firmware.py
